src/objects/sparepart__c.object
<CustomObject>
    <fields>
        <fullName>ALLAmount__c</fullName>
        <formula>Field19__c  +  ZHzongjiage__c  +  Field20__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>总金额合计</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>count1__c  +  count2__c  +  count3__c  +  count4__c  +  count5__c</formula>
        <label>总数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BJZT__c</fullName>
        <label>备件状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>已发货</fullName>
                </value>
                <value>
                    <fullName>未发货</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cgzhekou__c</fullName>
        <label>常规折扣</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <formula>X1__r.Field1__c  +  X2__r.Field1__c  +  X3__r.Field1__c  +  X4__r.Field1__c  +  X5__r.Field1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>W未发货</fullName>
                    <default>true</default>
                    <label>W未发货</label>
                </value>
                <value>
                    <fullName>Y已发货，待更换</fullName>
                </value>
                <value>
                    <fullName>Q缺货，待发货</fullName>
                </value>
                <value>
                    <fullName>B维修备用，待换回库存备件</fullName>
                </value>
                <value>
                    <fullName>R已更换，旧件返库中</fullName>
                </value>
                <value>
                    <fullName>N未使用，旧件返库中</fullName>
                </value>
                <value>
                    <fullName>F备件已返库，关闭</fullName>
                </value>
                <value>
                    <fullName>P备用机已返库，关闭</fullName>
                </value>
                <value>
                    <fullName>J已拒绝，关闭</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field1_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>备件申请</relationshipLabel>
        <relationshipName>bjsqKxHi_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InstallationEquipment__c</fullName>
        <formula>Field2__r.installationdate__c</formula>
        <label>设备安装日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lists__c</fullName>
        <label>出库、返库备件库列表（停用）</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>技术部备件库</fullName>
                </value>
                <value>
                    <fullName>上海技术备件库</fullName>
                </value>
                <value>
                    <fullName>广州技术备件库</fullName>
                </value>
                <value>
                    <fullName>济南技术备件库</fullName>
                </value>
                <value>
                    <fullName>西安技术备件库</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartsCoding1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号1（常规）</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>备件申请</relationshipLabel>
        <relationshipName>ICQR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartsCoding2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号2（常规）</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>备件申请 (备件编号2（常规）)</relationshipLabel>
        <relationshipName>ICQb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartsCoding3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号3（常规）</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>备件申请 (备件编号3（常规）)</relationshipLabel>
        <relationshipName>ICQl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartsName1__c</fullName>
        <formula>PartsCoding1__r.ChineseDescription__c</formula>
        <label>备件名称1（常规）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsName2__c</fullName>
        <formula>PartsCoding2__r.ChineseDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件名称2（常规）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsName3__c</fullName>
        <formula>PartsCoding3__r.ChineseDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件名称3（常规）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsValue1__c</fullName>
        <formula>PartsCoding1__r.StandardPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件价值1（常规）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PartsValue2__c</fullName>
        <formula>PartsCoding2__r.StandardPrice__c</formula>
        <label>备件价值2（常规）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PartsValue3__c</fullName>
        <formula>PartsCoding3__r.StandardPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件价值3（常规）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RegionalAssistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>区域助理</label>
        <referenceTo>User</referenceTo>
        <relationshipName>rIMy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegionalTechnicalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>区域技术经理</label>
        <referenceTo>User</referenceTo>
        <relationshipName>rIMK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SISNumber__c</fullName>
        <label>SISNumber</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scannernum__c</fullName>
        <label>#Scanner数量</label>
        <summaryFilterItems>
            <field>sparepartdetail__c.KCBH__c</field>
            <operation>contains</operation>
            <value>1580701</value>
        </summaryFilterItems>
        <summaryForeignKey>sparepartdetail__c.sparepart__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TechnologyCenter__c</fullName>
        <label>技术中心</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>沈阳技术服务中心</fullName>
                </value>
                <value>
                    <fullName>北京技术服务 中心</fullName>
                </value>
                <value>
                    <fullName>济南技术服务中心</fullName>
                </value>
                <value>
                    <fullName>上海技术服务中心</fullName>
                </value>
                <value>
                    <fullName>广州技术服务中心</fullName>
                </value>
                <value>
                    <fullName>重庆技术服务中心</fullName>
                </value>
                <value>
                    <fullName>西安技术服务中心</fullName>
                </value>
                <value>
                    <fullName>香港技术服务中心</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>总件数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>厂商</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>欧堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>KOWA</fullName>
                </value>
                <value>
                    <fullName>海涅</fullName>
                </value>
                <value>
                    <fullName>瑞贝科</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WarrantyEnd__c</fullName>
        <formula>Field2__r.warrantyEnd__c</formula>
        <label>保修终止日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Whetherthewarrantyperiod__c</fullName>
        <label>#是否在保修期内</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号1</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>备件申请</relationshipLabel>
        <relationshipName>beijianbianhao1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号2</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>备件申请 (备件编号2)</relationshipLabel>
        <relationshipName>beijianbianhao2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号3</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>备件申请 (备件编号3)</relationshipLabel>
        <relationshipName>beijianbianhao3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZHzongjiage__c</fullName>
        <formula>Field10__c  *  Cgzhekou__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>折后备件总价格</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>收货地址</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>area__c</fullName>
        <formula>servicerequest__r.Equipment__r.areanew__c</formula>
        <label>区域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bjjz2__c</fullName>
        <formula>X2__r.Field1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件价值2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bjjz3__c</fullName>
        <formula>X3__r.Field1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件价值3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bjjz4__c</fullName>
        <formula>X4__r.Field1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件价值4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bjmc1__c</fullName>
        <formula>X1__r.Ename__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件名称1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bjmc2__c</fullName>
        <formula>X2__r.Ename__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件名称2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bjmc3__c</fullName>
        <formula>X3__r.Ename__c</formula>
        <label>备件名称3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chukutrackingnum__c</fullName>
        <label>出库快递单号</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ckxlh1__c</fullName>
        <label>出库序列号1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ckxlh2__c</fullName>
        <label>出库序列号2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ckxlh3__c</fullName>
        <label>出库序列号3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>count1__c</fullName>
        <label>数量1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>count2__c</fullName>
        <label>数量2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>count3__c</fullName>
        <label>数量3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fankukuaididanhao__c</fullName>
        <label>返库快递单号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fkxlh1__c</fullName>
        <inlineHelpText>如备件未用返库，返库序列号填入出库序列号</inlineHelpText>
        <label>返库序列号1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fkxlh2__c</fullName>
        <label>返库序列号2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fkxlh3__c</fullName>
        <label>返库序列号3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jgnum__c</fullName>
        <label>#激光腔数量</label>
        <summaryFilterItems>
            <field>sparepartdetail__c.KCBH__c</field>
            <operation>contains</operation>
            <value>1619000</value>
        </summaryFilterItems>
        <summaryForeignKey>sparepartdetail__c.sparepart__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>newstate__c</fullName>
        <label>备件状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N待审批</fullName>
                </value>
                <value>
                    <fullName>A已审批</fullName>
                </value>
                <value>
                    <fullName>S已发货</fullName>
                </value>
                <value>
                    <fullName>Q缺货，补库备件未到货</fullName>
                </value>
                <value>
                    <fullName>Q缺货，标准配置库存外备件</fullName>
                </value>
                <value>
                    <fullName>B已到货</fullName>
                </value>
                <value>
                    <fullName>R已更换</fullName>
                </value>
                <value>
                    <fullName>W未使用</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>oldbackstate__c</fullName>
        <label>旧备件返库状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D待返库</fullName>
                </value>
                <value>
                    <fullName>F返库中</fullName>
                </value>
                <value>
                    <fullName>Y已返库</fullName>
                </value>
                <value>
                    <fullName>W无需返回旧件</fullName>
                </value>
                <value>
                    <fullName>已返厂</fullName>
                    <isActive>false</isActive>
                    <label>已返厂</label>
                </value>
                <value>
                    <fullName>已返库，不返厂</fullName>
                    <isActive>false</isActive>
                    <label>已返库，不返厂</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>orderno__c</fullName>
        <label>补库订单号</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phonenum__c</fullName>
        <label>收货人联系电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>qyzg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>区域主管</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PF69</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <label>申请原因简述</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>receivepeople__c</fullName>
        <label>收货人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>receiveperson_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>#收货人old</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>备件申请</relationshipLabel>
        <relationshipName>onqz_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>requesttime__c</fullName>
        <label>计划使用时间或要求到货时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>servicerequest__c</fullName>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>备件申请</relationshipLabel>
        <relationshipName>OPjC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>situation__c</fullName>
        <label>保修情况</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>保修期</fullName>
                </value>
                <value>
                    <fullName>收费维修</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>spstate__c</fullName>
        <label>审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>审批中</fullName>
                </value>
                <value>
                    <fullName>审批通过</fullName>
                </value>
                <value>
                    <fullName>审批拒绝</fullName>
                </value>
                <value>
                    <fullName>调回</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sqtotleprice__c</fullName>
        <label>申请总金额</label>
        <summarizedField>sparepartdetail__c.dprice__c</summarizedField>
        <summaryForeignKey>sparepartdetail__c.sparepart__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>申请性质</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>保外备件销售</fullName>
                </value>
                <value>
                    <fullName>维修备用</fullName>
                </value>
                <value>
                    <fullName>维修测试</fullName>
                </value>
                <value>
                    <fullName>保内维修更换</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>备件申请</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>servicerequest__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>spstate__c</columns>
        <columns>requesttime__c</columns>
        <columns>newstate__c</columns>
        <columns>oldbackstate__c</columns>
        <columns>SISNumber__c</columns>
        <columns>reason__c</columns>
        <columns>sqtotleprice__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>BJSQ-{YYYY}{MM}-{00000000}</displayFormat>
        <label>申请编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>备件申请</pluralLabel>
    <recordTypes>
        <fullName>RecordType4441</fullName>
        <active>true</active>
        <label>大型-备件申请</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType551</fullName>
        <active>false</active>
        <label>常规-备件申请</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>shenpitongguocainengfahuo</fullName>
        <active>true</active>
        <errorConditionFormula>(TEXT(spstate__c ) &lt;&gt; &quot;审批通过&quot;) &amp;&amp;
((TEXT( newstate__c )=&quot;已发货&quot;) || (TEXT( newstate__c )=&quot;已到货&quot;) || (TEXT( newstate__c )=&quot;已更换&quot;) )</errorConditionFormula>
        <errorMessage>审批没通过，不能选已发货、已到货、已更换</errorMessage>
    </validationRules>
</CustomObject>